syntax = "proto3";

option go_package = "./;sentinelpb";

package sentinel;

service Sentinel{
  rpc Publish(PublishRequest) returns (PublishResponse);
  rpc GetHeadCID(GetHeadCIDRequest) returns (GetHeadCIDResponse);
  rpc GetHeadIPNS(GetHeadIPNSRequest) returns (GetHeadIPNSResponse);
}

message PublishRequest{
  string cid = 1;
}
message PublishResponse {}

message GetHeadCIDRequest{}
message GetHeadCIDResponse{
  string cid = 1;
}

message GetHeadIPNSRequest{}
message GetHeadIPNSResponse{
  string ipnsAddr = 1;
}
